--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,18 @@
-asgiref==3.6.0
-Django==4.1.4
+asgiref==3.5.2
+cffi==1.15.1
+crispy-bootstrap5==0.7
+cryptography==38.0.4
+dj-database-url==1.0.0
+Django==4.1.2
+django-crispy-forms==1.14.0
+django-heroku==0.3.1
+django-rest-knox==4.2.0
 djangorestframework==3.14.0
 gunicorn==20.1.0
-pytz==2022.7
+Pillow==9.3.0
+psycopg2==2.9.5
+pycparser==2.21
+pytz==2022.2.1
 sqlparse==0.4.3
-tzdata==2022.7
+tzdata==2022.4
+whitenoise==6.2.0
